fix: z-index for list name

--- a/frontend/src/components/List/List.css
+++ b/frontend/src/components/List/List.css
@@ -65,6 +65,7 @@
     max-width: 100%;
     position: sticky;
     top: 0;
+    z-index: 1
 }
 
 .list-name-left {
